--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev --turbo",
+    "debug": "NODE_OPTIONS=--inspect next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
