--- a/.env.docker
+++ b/.env.docker
@@ -1,5 +1,5 @@
 # Docker 환경용 설정
-DATABASE_URL="postgresql://dev:password@localhost:5432/nextjs_dev"
+DATABASE_URL="postgresql://admin:admin@localhost:5432/nextjs_dev"
 # REDIS_URL="redis://localhost:6379"  # 필요할 때 활성화
 
 # Next.js
