feat: 통합 로깅 시스템 구현   - Server Actions, API Routes, 클라이언트 컴포넌트 로깅 통합   - 환경별 자동 감지 (서버/클라이언트, 개발/프로덕션)   - 구조화된 JSON 로그 및 성능 메트릭 지원   - 미들웨어 추가로 요청 로깅 및 보안 헤더 설정

--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,7 @@ API_TIMEOUT=10000
 # 로깅
 LOG_LEVEL=info
 LOGGING_ENABLED=true
+
+# 외부 로깅 서비스 (프로덕션용)
+# SENTRY_DSN=your-sentry-dsn-here
+# LOGFLARE_API_KEY=your-logflare-key-here
