--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@types/pg": "^8.15.4",
     "next": "^15.4.3",
     "pg": "^8.16.3",
+    "pino": "^9.7.0",
+    "pino-pretty": "^13.0.0",
     "prisma": "^6.12.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
