feat: Docker 배포 시스템 및 Jest 통합 테스트 완성
🐳 Docker 시스템:
- 멀티스테이지 Dockerfile로 프로덕션 최적화
- 개발용/프로덕션용 Docker Compose 분리
- 헬스체크 시스템 및 보안 강화 (non-root 사용자)
- 표준 프로젝트 구조 적용 (scripts/ 폴더)

🧪 테스트 시스템:
- Jest 기반 통합 테스트 (실제 TimescaleDB 사용)
- VSCode Jest Runner 지원
- __test__ prefix로 테스트 데이터 자동 분리
- revalidatePath 모킹으로 Next.js 호환성 확보

📚 문서화:
- README.md 전면 업데이트
- 테스트 실행 가이드 추가
- Docker 구성 및 배포 방법 정리
- 프로젝트 구조 표준화

🔧 설정 개선:
- Next.js standalone 빌드 설정
- Pino 로거 Next.js 호환성 개선
- Jest ESM 설정 및 TypeScript 지원
- Prisma 클라이언트 경로 표준화

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     volumes:
       - timescaledb_data:/var/lib/postgresql/data
       # TimescaleDB 초기화 스크립트
-      - ./docker/init-timescaledb.sql:/docker-entrypoint-initdb.d/init-timescaledb.sql:ro
+      - ./scripts/init-db.sql:/docker-entrypoint-initdb.d/init-db.sql:ro
     command: >
       postgres
       -c shared_preload_libraries=timescaledb
