feat: WebSocket 실시간 통신 시스템 구현
- Next.js 커스텀 서버 기반 WebSocket 통합 (단일 프로세스)
- useWebSocket 훅으로 클라이언트 자동 연결/재연결 관리
- Zustand 기반 WebSocket 상태 관리 및 메시지 히스토리
- 실시간 시계열 데이터 전송/수신 UI 컴포넌트
- React Strict Mode 비활성화로 연결 안정성 확보
- ES Module 문법 통일 (import/export)
- package.json 스크립트 단순화 (dev, build, start, test만 유지)

🔌 브라우저에서 ws://localhost:3000/api/ws 자동 연결
⚡ 실시간 데이터 브로드캐스팅 및 UI 업데이트 지원

--- a/package.json
+++ b/package.json
@@ -4,15 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "test": "jest",
-    "test:unit": "jest --testPathIgnorePatterns=integration",
-    "test:integration": "jest --testPathPatterns=integration",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "start": "NODE_ENV=production node server.js",
+    "test": "jest --testPathPatterns=integration"
   },
   "repository": {
     "type": "git",
@@ -36,7 +31,11 @@
     "prisma": "^6.12.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "ws": "^8.18.0",
     "zustand": "^5.0.6"
+  },
+  "optionalDependencies": {
+    "concurrently": "^9.1.0"
   },
   "devDependencies": {
     "@jest/globals": "^30.0.5",
@@ -44,6 +43,7 @@
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/ws": "^8.5.15",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.31.0",
     "eslint-config-next": "^15.4.3",
